# cpp_modules_test

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat
code/: ModuleTest.cpp
code/modules/basic_plane/: BasicPlane.Figures-Point.ixx  BasicPlane.Figures-Rectangle.ixx  BasicPlane.Figures.ixx
code/modules/cstd/: cstd.ixx
scripts/: setup_cl.bat
